feat: Have different animation on the form depending on if its a first search or a subsequent search.
When the user firsts for the first time a loader spinner appears, then
when the results return the form and the title move up and the spinners
disappears and the results card appear. On subsequent searchs the
results disappear and the spinner loader appears then when the results
return the spinner loader disappear and the results appear. This
difference in this animation is the tranlation of the spinner.

--- a/src/client/styles/formSection.scss
+++ b/src/client/styles/formSection.scss
@@ -448,7 +448,6 @@ $translateAmount: 0.25 * $sectionHeight;
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  animation: spin 2s linear infinite;
 
   @media (min-width: variables.$tablet) {
     width: 60px;
@@ -457,13 +456,30 @@ $translateAmount: 0.25 * $sectionHeight;
   //transform: translateX(100px);
 }
 
+.loader-animation-translate-rotate {
+  animation: spinTranslate 2s linear infinite;
+}
+
+.loader-animation-rotate {
+  animation: spin 2s linear infinite;
+}
+
 //translate Y has to be done in the animation as if multiple
 //transforms apply one will overide the other
-@keyframes spin {
+@keyframes spinTranslate {
   0% {
     transform: translateY($translateAmount) rotate(0deg);
   }
   100% {
     transform: translateY($translateAmount) rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
