feat: Added the my trip section
Styled and structure the my trip section. Used CSS grid to create a
responsive grid that displays cards of the users planned trip.
In mobile mobile there is one card per row, there are 2 cards per
row and in desktop 3 cards per row. Using the style of the results card
create and styled the my trip cards.

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,5 +1,6 @@
 @use 'hero';
 @use 'formSection';
+@use 'travelLog';
 
 body {
   margin: 0;
@@ -9,9 +10,8 @@ body {
   //font-family: "Courier New";
 }
 
-.shadow{
+.shadow {
   // box-shadow: 3px 4px 30px 5px rgba(138,133,138,1);
-  -webkit-box-shadow: 2px 3px 6px 2px rgba(0,0,0,0.3); 
-  box-shadow: 2px 3px 6px 2px rgba(0,0,0,0.3);
+  -webkit-box-shadow: 2px 3px 6px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 3px 6px 2px rgba(0, 0, 0, 0.3);
 }
-
