--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -57,6 +57,107 @@
         </div>
       </div>
     </section>
-    <section id="travel-log"></section>
+    <section id="travel-log">
+      <h2 class="">My <em>travel</em> plan</h2>
+        <div class="travel-cards"> 
+          <div class="travel-card display-flex shadow">
+            <div class="card-image">
+              <h2 class="locationHeader">Japan</h2>
+            </div>
+            <div class ="card-text">
+              <!-- <h2 class="location">Japan</h2> -->
+              <div class="card-time-to-trip">
+                <img src="../media/static/clock_icon.png">
+                <p>5 days until trip</p>
+              </div>
+              <div class="card-divider"></div>
+              <div class="card-weather-section">
+                <img class="card-weather-icon" src="https://www.weatherbit.io/static/img/icons/c02d.png">
+                <div class="card-weather-details">
+                  <h3>Scattered clouds</h3>
+                  <div class="card-temperature-details">
+                    <img class="card-temperature-details-image" src="../media/static/temperature_icon.png">
+                    <h4 class="card-temperature-details-temps">15 / 7 &deg C </h4>
+                  </div>
+                </div>
+              </div>
+              <button>Add to Trip</button>
+            </div>
+          </div>
+          <div class="travel-card display-flex shadow">
+            <div class="card-image">
+              <h2 class="locationHeader">Japan</h2>
+            </div>
+            <div class ="card-text">
+              <!-- <h2 class="location">Japan</h2> -->
+              <div class="card-time-to-trip">
+                <img src="../media/static/clock_icon.png">
+                <p>5 days until trip</p>
+              </div>
+              <div class="card-divider"></div>
+              <div class="card-weather-section">
+                <img class="card-weather-icon" src="https://www.weatherbit.io/static/img/icons/c02d.png">
+                <div class="card-weather-details">
+                  <h3>Scattered clouds</h3>
+                  <div class="card-temperature-details">
+                    <img class="card-temperature-details-image" src="../media/static/temperature_icon.png">
+                    <h4 class="card-temperature-details-temps">15 / 7 &deg C </h4>
+                  </div>
+                </div>
+              </div>
+              <button>Add to Trip</button>
+            </div>
+          </div>
+          <div class="travel-card display-flex shadow">
+            <div class="card-image">
+              <h2 class="locationHeader">Japan</h2>
+            </div>
+            <div class ="card-text">
+              <!-- <h2 class="location">Japan</h2> -->
+              <div class="card-time-to-trip">
+                <img src="../media/static/clock_icon.png">
+                <p>5 days until trip</p>
+              </div>
+              <div class="card-divider"></div>
+              <div class="card-weather-section">
+                <img class="card-weather-icon" src="https://www.weatherbit.io/static/img/icons/c02d.png">
+                <div class="card-weather-details">
+                  <h3>Scattered clouds</h3>
+                  <div class="card-temperature-details">
+                    <img class="card-temperature-details-image" src="../media/static/temperature_icon.png">
+                    <h4 class="card-temperature-details-temps">15 / 7 &deg C </h4>
+                  </div>
+                </div>
+              </div>
+              <button>Add to Trip</button>
+            </div>
+          </div>
+          <div class="travel-card display-flex shadow">
+            <div class="card-image">
+              <h2 class="locationHeader">Japan</h2>
+            </div>
+            <div class ="card-text">
+              <!-- <h2 class="location">Japan</h2> -->
+              <div class="card-time-to-trip">
+                <img src="../media/static/clock_icon.png">
+                <p>5 days until trip</p>
+              </div>
+              <div class="card-divider"></div>
+              <div class="card-weather-section">
+                <img class="card-weather-icon" src="https://www.weatherbit.io/static/img/icons/c02d.png">
+                <div class="card-weather-details">
+                  <h3>Scattered clouds</h3>
+                  <div class="card-temperature-details">
+                    <img class="card-temperature-details-image" src="../media/static/temperature_icon.png">
+                    <h4 class="card-temperature-details-temps">15 / 7 &deg C </h4>
+                  </div>
+                </div>
+              </div>
+              <button>Add to Trip</button>
+            </div>
+          </div>
+          
+      </div>
+    </section>
   </main>
 </body>
