--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -57,9 +57,13 @@
         </div>
       </div>
     </section>
-    <section id="travel-log">
+    <section id="travel-log" class="section-display-none">
       <h2 class="">My <em>travel</em> plan</h2>
-        <div class="travel-cards">         
+        <div class="travel-cards">  
+          <div class="add-new-trip">
+            <img src="../media/static/plus.png">
+            <p>Add New Trip</p>
+          </div>       
       </div>
     </section>
   </main>
