feat: changed trip section behaviours
When Add new trip card clicked, page scrolls to form section.
Add new Trip card also changed style on hover. When new cards
added they are now added before the add new trip card.

--- a/src/client/styles/travelLog.scss
+++ b/src/client/styles/travelLog.scss
@@ -247,4 +247,16 @@ $translateAmount: 0.25 * $sectionHeight;
     width: 25%;
     height: auto;
   }
+
+  &:hover {
+    // border: 4px variables.$red-2 solid;
+    // height: 412px;
+    font-weight: 600;
+    // text-decoration: underline;
+    img {
+      transform: scale(1.1, 1.1);
+    }
+  }
+
+  cursor: pointer;
 }
