style: animate on the hero banner
Changed the way the header text appears and the call to action div
flashes.

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -9,8 +9,11 @@
 <body>
   <main>
     <section id="hero-banner">
-      <h1>READY <em><strong>ADVENTURE</strong></em> GO</h1>
+      <!-- <h1><span class="slide-in-left">READY </span><span><em><strong>ADVENTURE</strong></span><span></em> GO</span></h1> -->
       <!-- <h1><em><strong>ADVENTURE</strong></em></h1> -->
+      <div class="heading-container">
+        <h1 class="slide-in-left">READY</h1><h1 class="slide-in-bottom"><em><strong>ADVENTURE</strong></em></h1><h1 class="scale-up"> GO</h1>
+      </div>
       <div class="call-to-action">
         <image class="arrow-icon" src="../media/static/double_arrow.png" alt="arrow"> 
         <h2>Start exploring</h2> 
