--- a/src/client/styles/hero.scss
+++ b/src/client/styles/hero.scss
@@ -26,24 +26,33 @@ $delay-Time: 4s;
   color: #fff;
   transform: scaleX(-1);
 
+  @media (min-width: variables.$medium-laptop) {
+    justify-content: flex-start;
+  }
+
   h1 {
     font-size: calc(100vw / 7);
     line-height: 1em;
-    opacity: 1;
+    //opacity: 1;
     font-weight: 300;
-    animation-name: fadeIn;
-    animation-duration: $delay-Time;
+    // animation-name: fadeIn;
+    // animation-duration: $delay-Time;
     padding: 0;
     margin: 0;
     text-align: left;
     width: 90vw;
-    transform: scaleX(-1);
+    //transform: scaleX(-1);
     word-wrap: break-word;
+
+    @media (min-width: variables.$medium-laptop) {
+      //margin-top: 40px;
+    }
 
     @media (min-width: variables.$large-laptop) {
       font-size: 16em;
       line-height: 1em;
       justify-content: center;
+      //margin-top: 40px;
     }
 
     @media (min-width: variables.$superlarge-screen) {
@@ -51,20 +60,19 @@ $delay-Time: 4s;
     }
   }
 
-  div {
+  .call-to-action {
     cursor: pointer;
     transform: scaleX(-1);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    animation-name: flash;
-    animation-duration: 3s;
-    animation-delay: 2s;
-    animation-iteration-count: infinite;
-    opacity: 0;
     margin: 15vh 0 0 0;
-
+    animation-name: pulse;
+    animation-duration: 3s;
+    animation-delay: 6s;
+    animation-iteration-count: infinite;
     width: 300px;
+    opacity: 0;
 
     @media (min-width: variables.$tablet) {
       width: 500px;
@@ -112,11 +120,76 @@ $delay-Time: 4s;
   }
 }
 
-@keyframes fadeIn {
+@keyframes pulse {
   0% {
-    opacity: 0;
+    opacity: 1;
+    transform: scale(-1, 1);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(-1.2, 1.2);
   }
   100% {
     opacity: 1;
+    transform: scale(-1, 1);
+  }
+}
+
+//animation for h1 text from animista
+.slide-in-left {
+  animation-name: slideInLeft;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slideInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(100%) scaleX(-1);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0) scaleX(-1);
+  }
+}
+
+.slide-in-bottom {
+  animation-name: slideInRight;
+  animation-duration: 2s;
+  animation-delay: 2s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+  transform: translateY(500%) scaleX(-1);
+}
+
+@keyframes slideInRight {
+  0% {
+    opacity: 0;
+    transform: translateY(500%) scaleX(-1);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0) scaleX(-1);
+  }
+}
+
+.scale-up {
+  animation-name: scaleUp;
+  animation-duration: 1s;
+  animation-delay: 4s;
+  //transform: scaleX(2);
+  opacity: 0;
+  transform: scaleX(-1) scaleY(0);
+  animation-fill-mode: forwards;
+}
+
+@keyframes scaleUp {
+  0% {
+    opacity: 0;
+    transform: scaleX(-1) scaleY(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scaleX(-1) scaleY(1);
   }
 }
