feat: Added the basic of an error message box
When there is an error with entry to the form or the data that is
returned a error message appears over the whole of the form section.

--- a/src/client/styles/formSection.scss
+++ b/src/client/styles/formSection.scss
@@ -25,6 +25,9 @@ $translateAmount: 0.25 * $sectionHeight;
   align-items: center;
   padding-top: 3%;
 
+  //to help position the error handler
+  position: relative;
+
   > h2 {
     width: variables.$sections-width-small-device;
     font-size: 2em;
