--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -61,7 +61,7 @@
       </div>
       <div class="error-handler-background error-non-display">
         <div class="error-handler-message-box">
-          <button class="error-button"><span>&#9747;</span></button>
+          <button class="error-button">X</button>
           <h1>Error</h1>
           <p>This has been some sort of error</p>
         </div>
