feat: added footer with API acknowledgments

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -77,4 +77,9 @@
       </div>
     </section>
   </main>
+  <footer>
+    <div>
+      Developed by Andrew White. Using <a href="http://www.geonames.org/"><em>Geonames</em></a>, <a href="https://www.weatherbit.io/api"><em>Weather Bit</em></a> and <a href="https://pixabay.com/api/docs/"><em>PixelBay</em></a> APIs.
+    </div>
+  </footer>
 </body>
