chore: added some simple jest testing for server and client
For the client testing check the place name validator function in the
validation.js file. For the server, that the function app() existed.

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -87,7 +87,7 @@
   </main>
   <footer>
     <div>
-      Developed by Andrew White. Using <a href="http://www.geonames.org/"><em>Geonames</em></a>, <a href="https://www.weatherbit.io/api"><em>Weather Bit</em></a> and <a href="https://pixabay.com/api/docs/"><em>PixelBay</em></a> APIs.
+      Developed by <a href="https://github.com/arlw87">Andrew White</a>. Using <a href="http://www.geonames.org/"><em>Geonames</em></a>, <a href="https://www.weatherbit.io/api"><em>Weather Bit</em></a> and <a href="https://pixabay.com/api/docs/"><em>PixelBay</em></a> APIs.
     </div>
   </footer>
 </body>
