--- a/src/client/styles/travelLog.scss
+++ b/src/client/styles/travelLog.scss
@@ -159,6 +159,11 @@ $translateAmount: 0.25 * $sectionHeight;
     border: none;
     color: variables.$red-1;
     padding: 1% 0;
+
+    &:hover {
+      color: #fff;
+      background-color: variables.$red-1;
+    }
   }
 }
 
