refactor: Varies changes to the style of form section and result section
Removed the min-width for results card and form for screen sizes
between large mobile and tablet.

fixed the alignment of template in the result and trip card for
screen sizes between large mobile and tablet.

--- a/src/client/styles/formSection.scss
+++ b/src/client/styles/formSection.scss
@@ -76,7 +76,6 @@ $main-element-width: 89%;
 
     @media (min-width: variables.$mobileLarge) {
       width: variables.$sections-width-medium-mobile;
-      max-width: 340px;
     }
 
     @media (min-width: variables.$tablet) {
@@ -207,7 +206,6 @@ $main-element-width: 89%;
 
   @media (min-width: variables.$mobileLarge) {
     width: variables.$sections-width-medium-mobile;
-    max-width: 340px;
   }
 
   @media (min-width: variables.$tablet) {
@@ -359,6 +357,7 @@ $main-element-width: 89%;
   display: flex;
   //border: 1px solid red;
   align-items: center;
+  justify-content: center;
 
   @media (min-width: variables.$tablet) {
     justify-content: center;
