--- a/src/client/styles/travelLog.scss
+++ b/src/client/styles/travelLog.scss
@@ -201,6 +201,7 @@ $translateAmount: 0.25 * $sectionHeight;
   display: flex;
   //border: 1px solid red;
   align-items: center;
+  justify-content: center;
 
   img {
     height: 30px;
