fix: add min height to form section to stop mobile display issue.
When using the site on a mobile device if the keyboard was used, the
view hight would shrink causing the form section to shrink and look
bad, adding min height fixes this issue.

--- a/src/client/styles/formSection.scss
+++ b/src/client/styles/formSection.scss
@@ -18,7 +18,7 @@ $main-element-width: 89%;
 
 #form-section {
   height: $sectionHeight;
-  //width: 100vw;
+  min-height: 748px;
   background-color: #eeeeee;
   display: flex;
   flex-direction: column;
