--- a/src/client/styles/formSection.scss
+++ b/src/client/styles/formSection.scss
@@ -25,6 +25,7 @@ $main-element-width: 89%;
   justify-content: flex-start;
   align-items: center;
   padding-top: 3%;
+  padding-bottom: 20px;
 
   //to help position the error handler
   position: relative;
