style: remove extra padding at the bottom of form section for tablets and above.

--- a/src/client/styles/formSection.scss
+++ b/src/client/styles/formSection.scss
@@ -44,6 +44,7 @@ $main-element-width: 89%;
 
     @media (min-width: variables.$tablet) {
       font-size: 3em;
+      padding-bottom: 0;
     }
 
     @media (min-width: variables.$small-laptop) {
