--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,10 +1,89 @@
 <!DOCTYPE html>
-<head>
-  <title>Travel App</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+<html lang="en">
+  <head>
+    <title>Travel App</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <main>
+      <section id="hero-banner">
+        <!-- <h1><span class="slide-in-left">READY </span><span><em><strong>ADVENTURE</strong></span><span></em> GO</span></h1> -->
+        <!-- <h1><em><strong>ADVENTURE</strong></em></h1> -->
+        <div class="heading-container">
+          <h1 class="slide-in-left">READY</h1><h1 class="slide-in-bottom"><em><strong>ADVENTURE</strong></em></h1><h1 class="scale-up"> GO</h1>
+        </div>
+        <div class="call-to-action">
+          <img class="arrow-icon" src="../media/static/double_arrow.png" alt="arrow"> 
+          <h2>Start exploring</h2> 
+          <img class="arrow-icon" src="../media/static/double_arrow.png" alt="arrow">
+        </div>
+      </section>
+      <section id="form-section">
+        <h2 class="transformStartPosition">Where do <em>you</em> want to go?</h2>
+        <form class="shadow transformStartPosition">
+          <div id="dest-div">
+            <label for="destination">Destination</label>
+            <input id="destination" type="text" required="required">
+          </div>
+          <div id="date-div">
+            <label for="date">Date</label>
+            <input id="date" type="date" required="required">
+          </div>
+          <button id="search">Search</button>
+        </form>
+        <div class="loader loader-animation-translate-rotate display-none">
+        </div>
+        <div class="results shadow display-none">
+          <div class="results-image">
+            <h2 class="locationHeader">Japan</h2>
+          </div>
+          <div class ="results-text">
+            <!-- <h2 class="location">Japan</h2> -->
+            <div class="time-to-trip">
+              <img src="../media/static/clock_icon.png" alt="clock">
+              <p>5 days until trip</p>
+            </div>
+            <div class="results-divider"></div>
+            <div class="weather-section">
+              <img class="weather-icon" src="https://www.weatherbit.io/static/img/icons/c02d.png" alt="weather-icon">
+              <div class="weather-details">
+                <h3>Scattered clouds</h3>
+                <div class="temperature-details">
+                  <img class="temperature-details-image" src="../media/static/temperature_icon.png" alt="temperature icon">
+                  <h4 class="temperature-details-temps">15 / 7 &deg; C </h4>
+                </div>
+              </div>
+            </div>
+            <button>Add to Trip</button>
+          </div>
+        </div>
+        <div class="error-handler-background error-non-display">
+          <div class="error-handler-message-box">
+            <button class="error-button">X</button>
+            <h1>Error</h1>
+            <p>This has been some sort of error</p>
+          </div>
+        </div>
+      </section>
+      <section id="travel-log" class="section-display-none">
+        <h2 class="">My <em>travel</em> plan</h2>
+          <div class="travel-cards">  
+            <div class="add-new-trip">
+              <img src="../media/static/plus.png" alt="plus sign">
+              <p>Add New Trip</p>
+            </div>       
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div>
+        Developed by <a href="https://github.com/arlw87">Andrew White</a>. Using <a href="http://www.geonames.org/"><em>Geonames</em></a>, <a href="https://www.weatherbit.io/api"><em>Weather Bit</em></a> and <a href="https://pixabay.com/api/docs/"><em>PixelBay</em></a> APIs.
+      </div>
+    </footer>
+  </body>
   <script>
     if ('serviceWorker' in navigator){
       window.addEventListener('load', ()=>
@@ -12,82 +91,5 @@
         navigator.serviceWorker.register('/service-worker.js');
       });
     }
-  </script>
-</head>
-<body>
-  <main>
-    <section id="hero-banner">
-      <!-- <h1><span class="slide-in-left">READY </span><span><em><strong>ADVENTURE</strong></span><span></em> GO</span></h1> -->
-      <!-- <h1><em><strong>ADVENTURE</strong></em></h1> -->
-      <div class="heading-container">
-        <h1 class="slide-in-left">READY</h1><h1 class="slide-in-bottom"><em><strong>ADVENTURE</strong></em></h1><h1 class="scale-up"> GO</h1>
-      </div>
-      <div class="call-to-action">
-        <image class="arrow-icon" src="../media/static/double_arrow.png" alt="arrow"> 
-        <h2>Start exploring</h2> 
-        <image class="arrow-icon" src="../media/static/double_arrow.png" alt="arrow"></image>
-      </div>
-    </section>
-    <section id="form-section">
-      <h2 class="transformStartPosition">Where do <em>you</em> want to go?</h2>
-      <form class="shadow transformStartPosition">
-        <div id="dest-div">
-          <label for="destination">Destination</label>
-          <input id="destination" type="text">
-        </div>
-        <div id="date-div">
-          <label for="date">Date</label>
-          <input id="date" type="date">
-        </div>
-        <button id="search">Search</button>
-      </form>
-      <div class="loader loader-animation-translate-rotate display-none">
-      </div>
-      <div class="results shadow display-none">
-        <div class="results-image">
-          <h2 class="locationHeader">Japan</h2>
-        </div>
-        <div class ="results-text">
-          <!-- <h2 class="location">Japan</h2> -->
-          <div class="time-to-trip">
-            <img src="../media/static/clock_icon.png">
-            <p>5 days until trip</p>
-          </div>
-          <div class="results-divider"></div>
-          <div class="weather-section">
-            <img class="weather-icon" src="https://www.weatherbit.io/static/img/icons/c02d.png">
-            <div class="weather-details">
-              <h3>Scattered clouds</h3>
-              <div class="temperature-details">
-                <img class="temperature-details-image" src="../media/static/temperature_icon.png">
-                <h4 class="temperature-details-temps">15 / 7 &deg C </h4>
-              </div>
-            </div>
-          </div>
-          <button>Add to Trip</button>
-        </div>
-      </div>
-      <div class="error-handler-background error-non-display">
-        <div class="error-handler-message-box">
-          <button class="error-button">X</button>
-          <h1>Error</h1>
-          <p>This has been some sort of error</p>
-        </div>
-      </div>
-    </section>
-    <section id="travel-log" class="section-display-none">
-      <h2 class="">My <em>travel</em> plan</h2>
-        <div class="travel-cards">  
-          <div class="add-new-trip">
-            <img src="../media/static/plus.png">
-            <p>Add New Trip</p>
-          </div>       
-      </div>
-    </section>
-  </main>
-  <footer>
-    <div>
-      Developed by <a href="https://github.com/arlw87">Andrew White</a>. Using <a href="http://www.geonames.org/"><em>Geonames</em></a>, <a href="https://www.weatherbit.io/api"><em>Weather Bit</em></a> and <a href="https://pixabay.com/api/docs/"><em>PixelBay</em></a> APIs.
-    </div>
-  </footer>
-</body>
+  </script>  
+</html>
